add missing api for student and teacher
